Changelog 0.3.59 [20230403]:
- Added New Setting "Prioritize By Season"
- Added New Setting "Prioritize By Part"
- Added Enime fallback

Changelog 0.3.58 [20230402]:
- Added New Setting "Set Items Per Page"

Changelog 0.3.57 [20230318]:
- Added New Setting "Prioritize Dual-Audio Sources"
- Added New Setting "Prioritize Multisubs Sources"
- Added New Setting "Prioritize Batch Sources"

Changelog 0.3.56 [20230318]:
- Fixed Small Bug with Skip Intro Duration
- Moved two settings

Changelog 0.3.55 [20230317]:
- Small Fixes with Playback

Changelog 0.3.54 [20230316]:
- Added New Setting "Enable Automatic Outro Skip"
- Added New Setting "Enable Automatic Intro Skip"
- Recoded Skip Intro

Changelog 0.3.53 [20230316]:
- Fixed playlist not building if airdate not available
- Added New Setting "Preferred Playlist Size"

Changelog 0.3.52 [20230315]:
- Fixed a small bug with Playing Next Dialog

Changelog 0.3.51 [20230314]:
- Fixed a major bug with the Playing Next Dialog

Changelog 0.3.50 [20230313]:
- Added New Setting "Dialog Theme"
- Added 2 New Themes for Skip Intro, Playing Next Dialog

Changelog 0.3.49 [20230310]:
- Fixed mal and kitsu token refresh

Changelog 0.3.48 [20230310]:
- Fixed crash on 9anime streams

Changelog 0.3.47 [20230310]:
- Made Nya Alt easier for Verizon Users
- Added New Setting "Preferred Subtitle Language"
- Renamed "Preferred Audio Stream"
- Renamed "Preferred Stream Source"

Changelog 0.3.46 [20230309]:
- Added connection to the tile in find relation and linting
- Added some fixes
- Fixed Skip Outro

Changelog 0.3.45 [20230309]:
- Added Aniskip

Changelog 0.3.44 [20230308]:
- cleanup html tags in description
- fixed next page in recommendations

Changelog 0.3.43 [20230308]:
- Added Context Menu "Find Recommendations"
- Added Context Menu "Find Relations"
- Renamed "Find Similar"

Changelog 0.3.42 [20230305]:
- re-added "Find Similar" to the context menu

Changelog 0.3.41 [20230303]:
- Renamed Preferred Source

Changelog 0.3.40 [20230302]: