@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.59">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.60">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,10 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.59 [20230403]:
-- Added New Setting "Prioritize By Season"
-- Added New Setting "Prioritize By Part"
-- Added Enime fallback
+Changelog 0.3.60 [20230405]:
+- Improved 2 Priority Settings
     </news>
   </extension>
 </addon>
